--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Floper</title>
+	<title>ACB/MS</title>
 	<!-- favicon -->
 	<link rel="shortcut icon" href="images/icons/favicon.ico">
 	<!-- Fonts -->
@@ -112,9 +112,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="about__text col-xs-12 col-md-6">
-					<h2 class="text__header">Sobre</h2>
+					<h2 class="text__header">Sobre nós</h2>
 					<p class="text__par">Somos a ACB/MS, grupo de entusiastas da sétima arte e da cultura, que busca por
-						meio de eventos, exibições e cursos perpetuar a paixão pela arte e pelo cinema.</p>
+						meio de eventos, exibições e cursos, perpetuar a paixão pela arte e pelo cinema.</p>
 					<a href="#works" rel="nofollow" class="text__button">Ver eventos</a>
 				</div>
 				<div class="about__right-column col-xs-12 col-md-6"></div>
@@ -141,7 +141,7 @@
 		<div class="container">
 			<div class="services__header-block">
 
-				<h2 class="services__header col-xs-12 col-sm-6">Propostas</h2>
+				<h2 class="services__header col-xs-12 col-sm-6">Nossas propostas</h2>
 
 				<div class="arrow-controls col-xs-12 col-sm-6">
 
@@ -177,7 +177,7 @@
 				</div>
 				<div class="item">
 					<div class="services__item">
-						<h3>Cultura</h3>
+						<h3>Audiovisual</h3>
 						<p class="services__item__text">We are a creative team of designers. We make websites, interfaces and identity. We believe that beauty is hidden in small things.</p>
 						<ul class="services__list">
 							<li>Web Site</li>
@@ -188,7 +188,7 @@
 				</div>
 				<div class="item">
 					<div class="services__item">
-						<h3>Audiovisual</h3>
+						<h3>Cultura</h3>
 						<p class="services__item__text">We are a creative team of designers. We make websites, interfaces and identity. We believe that beauty is hidden in small things.</p>
 						<ul class="services__list">
 							<li>SEO Optimize</li>
@@ -198,7 +198,7 @@
 				</div>
 				<div class="item">
 					<div class="services__item">
-						<h3>Design</h3>
+						<h3>Extensão</h3>
 						<p class="services__item__text">We are a creative team of designers. We make websites, interfaces and identity. We believe that beauty is hidden in small things.</p>
 						<ul class="services__list">
 							<li>Web Design</li>
@@ -209,7 +209,7 @@
 				</div>
 				<div class="item">
 					<div class="services__item">
-						<h3>Development</h3>
+						<h3>Música</h3>
 						<p class="services__item__text">We are a creative team of designers. We make websites, interfaces and identity. We believe that beauty is hidden in small things.</p>
 						<ul class="services__list">
 							<li>Web Design</li>
@@ -218,7 +218,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="item">
+				<!--<div class="item">
 					<div class="services__item">
 						<h3>Marketing</h3>
 						<p class="services__item__text">We are a creative team of designers. We make websites, interfaces and identity. We believe that beauty is hidden in small things.</p>
@@ -228,7 +228,7 @@
 							<li>Mobile Applications</li>
 						</ul>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</section>
@@ -244,8 +244,8 @@
 					<nav class="works__header__nav col-xs-12 col-sm-9">
 						<button data-filter="*" class="works__nav__item works__nav__item_active"><span class="works__button_underline"></span>Todos</button>
 						<button data-filter=".design" class="works__nav__item"><span class="works__button_underline"></span>CineCafé</button>
-						<button data-filter=".identy" class="works__nav__item"><span class="works__button_underline"></span>Movcine</button>
-						<button data-filter=".web" class="works__nav__item"><span class="works__button_underline"></span>Cineria</button>
+						<button data-filter=".identy" class="works__nav__item"><span class="works__button_underline"></span>Cineria</button>
+						<button data-filter=".web" class="works__nav__item"><span class="works__button_underline"></span>Movcine</button>
 					</nav>
 				</div>
 			</div>
@@ -371,7 +371,7 @@
 		<section id="clients" class="clients">
 			<div class="container">
 				<div class="clients__header row">
-					<h2 class="col-xs-12 col-md-9">Parceiros</h2>
+					<h2 class="col-xs-12 col-md-9">Nossos parceiros</h2>
 
 				<!-- clients controls -->
 					<div class="clients__controls col-xs-12 col-md-3">
@@ -427,8 +427,8 @@
 						<div class="item">
 							<div class="clients__comment__item">
 								<div class="comment__customer col-xs-12 col-md-4">
-									<h3>Monica Voxtel</h3>
-									<h4 class="comment__customer__prefession">Mersedes, Test Driver</h4>
+									<h3>Mônica</h3>
+									<h4 class="comment__customer__prefession">NovaEscola</h4>
 								</div>
 
 								<blockquote class="comment__text col-xs-12 col-md-8">
